name:                ivory-tower-base
version:             0.1.0.0
synopsis:            Ivory Tower utilites
-- description:
license:             BSD3
author:              base48.cz
maintainer:          srk@48.io
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ivory.Base
                       Ivory.Base.Math
                       Ivory.Tower.Base
                       Ivory.Tower.Base.Debug
                       Ivory.Tower.Base.GPIO
                       Ivory.Tower.Base.CAN
                       Ivory.Tower.Base.LED
                       Ivory.Tower.Base.UART
                       Ivory.Tower.Base.UART.Types
                       Ivory.Tower.Base.Util

  build-depends:       base >= 4.6,
                       bytestring,
                       dlist,
                       monadLib,
                       ivory,
                       ivory-stdlib,
                       ivory-serialize,
                       ivory-hw,
                       ivory-bsp-stm32,
                       tower              >= 0.9,
                       tower-config,
                       tower-hal

  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
